Added steps to cook
Users could not cook it by intuition

--- a/recipes/carrotribbonsalad.html
+++ b/recipes/carrotribbonsalad.html
@@ -28,7 +28,15 @@
         <li>3 tablespoons honey-roasted pecan pieces</li>
         <li>2 tablespoons chopped fresh flat-leaf parsley, plus more for garnish</li>
     </ul>
-    
+    <h2>Steps</h2>
+    <ol>
+        <li>Gather all ingredients.</li>
+        <li>Whisk together mayonnaise, sugar, vinegar, and salt in a 1-quart container with a lid.</li>
+        <li>Add carrots, bacon, shallots, cranberries, pecan pieces, and parsley; cover and shake until carrots are
+            evenly coated in mayonnaise mixture.</li>
+        <li>Transfer to a serving bowl and garnish with parsley.</li>
+        
+    </ol>
 </body>
 
 </html>
