Added images for Cookies and Potato Kugel
Users wanted to see how the final product looked like

--- a/recipes/potatokugel.html
+++ b/recipes/potatokugel.html
@@ -9,6 +9,7 @@
 
 <body>
     <h1>Potato Kugel</h1>
+    <img src="https://www.allrecipes.com/thmb/7WFxynrbofEHfvs9wCDikPs7I74=/750x0/filters:no_upscale():max_bytes(150000):strip_icc()/204133-old-fashioned-potato-kugel-ddmfs-4x3_10923-28c45e31d98948d0a08c8ced7ae74a4d.jpg" alt="Image of the kugel">
     <a href="../index.html">Home</a>
     <h2>Description</h2>
     <p>This crispy potato kugel is hands-down the best my family and many of my guests have ever tasted. It's easy to
