--- a/recipes/cookies.html
+++ b/recipes/cookies.html
@@ -8,6 +8,8 @@
 <body>
     <h1>Cookies</h1>
     <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F03%2F08%2F10813-best-chocolate-chip-cookies-mfs-step-7-148.jpg&q=60&c=sc&poi=auto&orient=true&h=512" alt="A photo of the cookies">
-    
+    <h2>Description</h2>
+    <p>This chocolate chip cookie recipe makes dozens of delicious cookies with crisp edges and chewy middles loaded with chocolate chips!</p>
+
 </body>
 </html>
