--- a/recipes/cookies.html
+++ b/recipes/cookies.html
@@ -10,6 +10,17 @@
     <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F03%2F08%2F10813-best-chocolate-chip-cookies-mfs-step-7-148.jpg&q=60&c=sc&poi=auto&orient=true&h=512" alt="A photo of the cookies">
     <h2>Description</h2>
     <p>This chocolate chip cookie recipe makes dozens of delicious cookies with crisp edges and chewy middles loaded with chocolate chips!</p>
-
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Butter: This classic chocolate chip cookie recipe starts with two sticks of butter creamed with white and brown sugars. The blend of sugars creates a perfectly balanced flavor.</li>
+        <li>Eggs add moisture and act as a binding agent, which means they help hold the dough together.</li>
+        <li>Vanilla: Vanilla extract enhances the overall flavor of the chocolate chip cookies.</li>
+        <li>Baking soda: Baking soda acts as a leavener, which means it helps the cookies rise.</li>
+        <li>Water: A bit of hot water creates steam as it bakes, working with the baking soda to puff the cookies up.</li>
+        <li>Salt: A pinch of salt enhances the flavors of the other ingredients, but it won't make the cookies taste salty.</li>
+        <li>Flour: All-purpose flour helps create gluten, which adds structure to the cookie dough.</li>
+        <li>Chocolate chips: Of course, you'll need semisweet chocolate chips! You can use dark or milk chocolate chips if you prefer.</li>
+        <li>Nuts (optional): Walnuts are optional, but they add nutty flavor and a welcome crunch.</li>
+    </ul>
 </body>
 </html>
