Added steps for cookies
Convention

--- a/recipes/cookies.html
+++ b/recipes/cookies.html
@@ -22,5 +22,13 @@
         <li>Chocolate chips: Of course, you'll need semisweet chocolate chips! You can use dark or milk chocolate chips if you prefer.</li>
         <li>Nuts (optional): Walnuts are optional, but they add nutty flavor and a welcome crunch.</li>
     </ul>
+
+    <ol>
+        <li>Beat the butter and sugars, then beat in the eggs and vanilla.</li>
+        <li>Dissolve the baking soda in hot water and add to the mixture.</li>
+        <li>Stir in the flour, chocolate chips, and walnuts.</li>
+        <li>Drop dough onto a prepared baking sheet.</li>
+        <li>Bake until the edges are golden brown.</li>
+    </ol>
 </body>
 </html>
