--- a/index.html
+++ b/index.html
@@ -7,5 +7,12 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <ul>
+        <li><a href="recipes/carrotribbonsalad.html">Carrot Ribbon Salad</a></li>
+        <li><a href="recipes/cookies.html">Cookies</a></li>
+        <li><a href="recipes/potatokugel.html">Potato Kugel</a></li>
+    </ul>
+    
+
 </body>
 </html>
